# mangrove-studio

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
examples/: alberta-feedstock-data.yaml  biochar-credit-data.yaml  complete-biochar-data.yaml  example-produced-data.yaml
src/mangrove_studio/: __init__.py
src/mangrove_studio/agent/: __init__.py
src/mangrove_studio/agent/doc_parser/: __init__.py
src/mangrove_studio/agent/mcp_server/: __init__.py
src/mangrove_studio/agent/model_generator/: __init__.py
src/mangrove_studio/cli/: main.py
src/mangrove_studio/engine/: __init__.py
src/mangrove_studio/engine/components/: activity-emission-factor.yaml  carbon-intensity.yaml  carbon-sequestration.yaml  credit-buffer.yaml  embodied-emissions-amortization.yaml  embodied-transport-emissions.yaml  fuel-combustion-emissions.yaml  heating-value-attribution-factor.yaml  mass-aggregation.yaml  net-carbon-removal.yaml  permanence-factor.yaml  tonne-km-transport-emissions.yaml  unit-conversion.yaml
src/mangrove_studio/engine/compositions/: alberta-feedstock-model.yaml  biochar-credit-model.yaml  complete-biochar-lifecycle.yaml  example-biochar-delivered-model.yaml  example-biochar-produced-model.yaml  example-feedstock-model.yaml
src/mangrove_studio/engine/generator/: __init__.py  generate.py
src/mangrove_studio/engine/runner/: __init__.py
tests/: test_biochar_credit.py  test_cli.py  test_complete_lifecycle.py  test_doc_parser.py  test_generator.py  test_mcp_server.py  test_model_generator.py  test_runner.py  test_schema_validation.py
(+3 files in other folders)
